*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -50,9 +50,7 @@
       <p>When a thread is suspended in the debugger, you can change the values 
         of Java primitives and Strings in the <b>Variables</b> view. From the 
         variable's context menu, choose <b>Change Variable Value</b>. </p>
-      <p><img src="images/change-variable-value.gif" width="483" height="275"> 
-      </p>
-      <p>&nbsp;</p>
+      <p><img src="images/change-variable-value.gif" width="483" height="275"></p>
     </td>
   </tr>
   <tr> 
@@ -62,6 +60,18 @@
       is displayed as hover help. 
       <p><img src="images/variable-hover.gif" width="400" height="104"></p>
     </td>
+  </tr>
+  <tr> 
+    <td width="30%" valign="top" align="right"><b>Drop to Frame</b></td>
+    <td width="70%" valign="top" align="left">When stepping through your code, 
+      you might occasionally step too far, or step over a line you meant to step 
+      into. Rather than restarting your debug session, you can use the <b>Drop 
+      to Frame</b> action to quickly go back to the beginning of a method. Select 
+      the stack frame corresponding to the Java method you wish to restart, and 
+      select <b>Drop to Frame</b> from its context menu. The current instruction 
+      pointer will be reset to the first executable statement in the method. Note 
+      that this works for non-top stack frames as well. Drop to frame is only 
+      available when debuggin with a 1.4 or higher VM, or the J9 VM.</td>
   </tr>
   <tr> 
     <td width="30%" valign="top" align="right"><b>Hot code replace</b></td>
@@ -105,8 +115,8 @@
   <tr> 
     <td width="30%" valign="top" align="right"><b>Step filters</b></td>
     <td width="70%" valign="top" align="left">Step filters prevent the debugger 
-      from suspending in specified classes and packages when stepping through 
-      code. Step filters are established in Window&gt;Preferences&gt;Java&gt;Debug&gt;Step 
+      from suspending in specified classes and packages when stepping into code. 
+      Step filters are established in Window&gt;Preferences&gt;Java&gt;Debug&gt;Step 
       Filtering. Step filters are in effect when the <b>Step With Filters</b> 
       action (on the debug toolbar and menu) is invoked. In the Debug view, the 
       selected stack frame's package or declaring type can be quickly added to 
@@ -122,6 +132,20 @@
       the associated launch configuration for editing. The launch configuration 
       can also be opened from the context menu associated with any item in the 
       Debug view.</td>
+  </tr>
+  <tr> 
+    <td width="30%" valign="top" align="right"><b>Favorite launch configurations</b></td>
+    <td width="70%" valign="top" align="left"> 
+      <p>Launch configurations appear in the Run/Debug drop-down menus in most 
+        recently launched order. However it is possible to force a launch configuration 
+        to always appear at the top of the drop-downs by making the configuration 
+        a 'favorite'. In the Debug&gt;Launch History preference page, you can 
+        establish favorites by launch type (Run, Debug, External Tools).</p>
+      <p><img src="images/favorites-prefs.gif" width="541" height="528"></p>
+      <p>Now, the Debug drop-down menu shows the specified configurations as favorites, 
+        with the rest of the configurations in history order.</p>
+      <p><img src="images/debug-drop-down.gif" width="191" height="206"></p>
+    </td>
   </tr>
   <tr> 
     <td width="30%" valign="top" align="right"><b>Detail formatters</b></td>
@@ -145,6 +169,22 @@
       <b>Variables</b> and <b>Expressions</b> views supports word wrap, available 
       from the view drop-down menu. 
       <p><img src="images/variables-details-pane.gif" width="352" height="218"></p>
+    </td>
+  </tr>
+  <tr> 
+    <td width="30%" valign="top" align="right"><b>Code assist in the debugger</b></td>
+    <td width="70%" valign="top" align="left"> 
+      <p>Code assist is available in many contexts beyond writing code in the 
+        Java editor:</p>
+      <ul>
+        <li>When entering a condition for a breakpoint</li>
+        <li>In the Details pane of the Variables &amp; Expressions view</li>
+        <li>When entering a Details Formatter code snippet</li>
+        <li>When entering code in a Scrapbook page</li>
+        <li>In the Display view</li>
+      </ul>
+      <p><img src="images/display-view-code-assist.gif" width="406" height="228"></p>
+      <p>&nbsp;</p>
     </td>
   </tr>
   <tr> 
