--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-80.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-80.htm
@@ -47,7 +47,7 @@
   <a href="tasks-162.htm">Self encapsulating a field</a><br>
   <a href="tasks-164.htm">Replacing a local variable with a query</a><br>
   <a href="tasks-165.htm">Pulling members up to superclass</a><br>
-  <a href="tasks-220.htm">Pushing members down to subclasses</br><br>
+  <a href="tasks-220.htm">Pushing members down to subclasses</a><br>
   <a href="tasks-167.htm">Moving static members between types</a><br>
   <a href="tasks-210.htm">Moving an instance method to a component</a><br>
   <a href="tasks-211.htm">Converting a local variable to a field</a><br>
