--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -95,18 +95,33 @@
     <td width="30%" valign="top" align="right"> 
       <div aligh="right"> <b>Creating watch items</b> </div>
     </td>
-    <td width="70%" valign="top" align="left">The Java debugger can create watch 
-      items from the Java editor by selecting an expression and using the <b>Watch</b> 
-      action (available in the context menu, and in the <b>Run</b> menu). As well, 
-      a watch item can be created by selecting a variable and using the <b>Watch</b> 
-      action.</td>
+    <td width="70%" valign="top" align="left">A watch item is an expression in 
+      the <b>Expressions</b> view whose value is updated as you debug. You can 
+      create watch items from the Java editor by selecting an expression or variable 
+      and choosing <b>Watch</b> from its context menu or the top-level <b>Run</b> 
+      menu). </td>
+  </tr>
+  <tr> 
+    <td width="30%" valign="top" align="right"> 
+      <div aligh="right"> <b>Watch points</b></div>
+    </td>
+    <td width="70%" valign="top" align="left">
+      <p>A watch point is a breakpoint that suspends execution whenever a specified 
+        variable is accessed or modified. To set a watchpoint, select a variable 
+        in the Outline view and choose <b>Add/Remove Watchpoint</b> from its context 
+        menu. To configure a watchpoint, select the watchpoint in the <b>Breakpoints</b> 
+        view and choose <b>Properties...</b> from its context menu. The most important 
+        properties for this type of breakpoint are the <b>Access</b> and <b>Modification</b> 
+        checkboxes which control when the breakpoint can suspend execution.</p>
+      <p><img src="images/watchpoint-properties.gif" width="403" height="458"></p>
+    </td>
   </tr>
   <tr> 
     <td width="30%" valign="top" align="right"> 
       <div align="right"> <b>Threads &amp; Monitors view</b></div>
     </td>
     <td width="70%" valign="top" align="left"> 
-      <p>The debugger's<b>Threads and Monitors</b> view shows which threads are 
+      <p>The debugger's<b> Threads and Monitors</b> view shows which threads are 
         holding locks and which are waiting to acquire locks. </p>
       <p><img src="../whatsNew/images/threads-monitors.gif" width="373" height="260"></p>
       <p>&nbsp;</p>
