*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/swt_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/swt_whatsnew.html
@@ -26,9 +26,19 @@
     </td>
   </tr>
   <tr>
+    <td colspan="2" valign="top">
+      <hr>
+    </td>
+  </tr>
+  <tr>
     <td width="30%" valign="top" align="right"><strong>Mac OS X</strong></td>
     <td width="70%" valign="top" align="left">SWT/MacOSX is more stable
-      and feature complete than its 2.0 predecessor. [maybe insert Mac screen shot?]
+      and feature complete than its 2.0 predecessor.
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2" valign="top">
+      <hr>
     </td>
   </tr>
   <tr>
@@ -39,7 +49,12 @@
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="right"><strong>Interesting new API</strong></td>
+    <td colspan="2" valign="top">
+      <hr>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><strong>Interesting<br>new API</strong></td>
     <td width="70%" valign="top" align="left">
       <strong><code>Display.getDismissalAlignment():</code></strong> Returns the ordering that should
         be used when positioning the default dismissal button for a dialog.  This allows dialogs to define
@@ -50,7 +65,13 @@
         on SWT/motif in DBCS languages should treat a <code>Font</code>’s collection of <code>FontData</code>
         objects as inseparable.</p>
       <p><strong><code>StyledText.setSelectionForeground/Background(Color):</code></strong> Sets the editor’s selection
-        colors.  There are also new methods for getting these color values. [insert screen shot from XP]</p>
+        colors.  There are also new methods for getting these color values.</p>
+      <p align="center"><img border="0" src="images/swt-selectionColor.gif" width="245" height="49"></p>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2" valign="top">
+      <hr>
     </td>
   </tr>
 </table>
