Fix typos in Ant known problems

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -709,7 +709,7 @@ special Ant class loader and not by a plug-in classloader. (bug <a href="http://
 <h4>Concurrent Ant builds not supported</h4>
 <p>Eclipse runs Ant in the same JVM as the rest of Eclipse. Several aspects of
 Ant and its use of global Java resources (such as System.out and System.err),
-make it unsafe to run more than one Ant build concurrent. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=24129">24129</a>).</p>
+make it unsafe to run more than one Ant build concurrently. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=24129">24129</a>).</p>
 <h4>Running certain Ant tasks cause memory leakage</h4>
 <p>Certain Ant tasks are known to leak memory. Please see the bug report for
 details, patches, and possible workarounds. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=24448">24448</a>)</p>
@@ -719,7 +719,7 @@ details, patches, and possible workarounds. (bug <a href="http://bugs.eclipse.or
 is not handled. This is not the same as making use of the &lt;input&gt; task,
 which works correctly within Eclipse. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=21748">21748</a>)</p>
 <h4>Ant Editor code completion based on Ant 1.5</h4>
-<p>Code completion provided by the Ant editor does not respect to the
+<p>Code completion provided by the Ant editor does not respect the
 user-specified version of <code>org.eclipse.ant.core</code> plug-in or ANT_HOME.
 Code completion proposals are always based on Ant 1.5. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=30886">30886</a>).</p>
 <h3><font color="#000000">3.1.3 <a name="I-Platform - Help">Platform - Help</a></font></h3>
