*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_resources_linked.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_resources_linked.htm
@@ -33,13 +33,10 @@
   of an operation, this will not be the case (i.e. the external program will not 
   find the file or folder on disk because it is located elsewhere in the file 
   system). In this case the operation would most likely fail due to invalid input 
-  or, worse yet, yield unpredictable results.</p>
-<p>For the second case, problems may arise if the provider determines the location 
-  of a linked resource using the API on IResource and expects this to translate 
-  to the resource's location in the local file system. For example,a provider 
-  may use IResource.getProjectRelativePath() and assume that this path can be 
-  used along with the project's location on disk to calculate the resource's location. 
-  Again, the opeation would most likely fail.</p>
+  or, worse yet, yield unpredictable results. For the second case, problems may 
+  arise if the provider determines the location of a linked resource using the 
+  API on IResource and expects this to translate to a location in the file system 
+  that is a child of the project directory.</p>
 <h4>Backwards Compatibility</h4>
 <p>Because existing repository provider (i.e. pre-linked resources) might have 
   reasonably assumed that the local file system structure mirrored the project 
