--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
@@ -20,7 +20,7 @@
         A file can be replaced with an edition from the local history not just in the Navigator but also in the Package Explorer view.
       </li>
       <li>
-        The JDT allows you to replace individual Java elements (types and their members) with editions from the local history.
+        The JDT allows you to compare and/or replace individual Java elements (types and their members) with editions from the local history.
       </li>
       <li>
         The JDT allows you to restore Java elements (and files) deleted from the workbench that have been kept in the local history.
@@ -34,16 +34,17 @@
       <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0">
     </p>
     <p>
-      <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
-       <a href="../concepts/concepts-6.htm">Java views</a>
+      	<a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
+       	<a href="../concepts/concepts-6.htm">Java views</a>
     </p>
     <p>
       <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks">
     </p>
     <p>
       <a href="tasks-54.htm">Using the Java editor</a><br>
-       <a href="tasks-63.htm">Replacing a Java element with a local history edition</a><br>
-       <a href="tasks-64.htm">Restoring a deleted workbench element</a>
+      <a href="tasks-63.htm">Replacing a Java element with a local history edition</a><br>
+      <a href="tasks-63a.htm">Comparing a Java element with a local history edition</a><br>
+      <a href="tasks-64.htm">Restoring a deleted workbench element</a>
     </p>
     <p>
       <img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference">
