--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
@@ -42,10 +42,12 @@
     <p>
       <a href="tasks-13.htm">Creating a Java project as its own source container</a><br>
        <a href="tasks-14.htm">Creating a Java project with source folders</a><br>
+       <a href="tasks-215m">Creating a Java project to match an existing layout</a><br>
        <a href="tasks-17.htm">Creating a new Java class</a><br>
        <a href="tasks-21.htm">Creating a new Java interface</a><br>
        <a href="tasks-26.htm">Creating a new source folder</a><br>
-       <a href="tasks-11.htm">Creating Java elements</a>
+       <a href="tasks-11.htm">Creating Java elements</a><br>
+       <a href="tasks-110.htm">Working with build paths</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
