--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-13.htm
@@ -61,10 +61,11 @@
       <a href="tasks-11.htm">Creating Java elements</a><br>
        <a href="tasks-12.htm">Creating a new Java project</a><br>
        <a href="tasks-14.htm">Creating a Java project with source folders</a><br>
+       <a href="tasks-215m">Creating a Java project to match an existing layout</a><br>
        <a href="tasks-15.htm">Creating a new Java package</a><br>
        <a href="tasks-17.htm">Creating a new Java class</a><br>
        <a href="tasks-25.htm">Creating a new interface in a compilation unit</a><br>
-       <a href="tasks-149.htm">Creating a Java scrapbook page</a>
+       <a href="tasks-110.htm">Working with build paths</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
