add <alt=... to images

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/swt_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/swt_whatsnew.html
@@ -45,7 +45,7 @@
     <td width="30%" valign="top" align="right"><strong>GTK</strong></td>
     <td width="70%" valign="top" align="left">Drag and drop is now fully implemented on SWT/gtk.</p>
       <p>SWT/gtk now uses native Table and Tree widgets.
-      <p align="center"><img border="0" src="images/swt-gtktree.gif" width="176" height="177"></p>
+      <p align="center"><img border="0" src="images/swt-gtktree.gif" alt="Native gtk tree" width="176" height="177"></p>
     </td>
   </tr>
   <tr>
@@ -59,14 +59,14 @@
       <strong><code>Display.getDismissalAlignment():</code></strong> Returns the ordering that should
         be used when positioning the default dismissal button for a dialog.  This allows dialogs to define
         button orderings so as to match platform policy.
-      <p align="center"><img border="0" src="images/swt-buttonOrder.gif" width="317" height="145"></p>
+      <p align="center"><img border="0" src="images/swt-buttonOrder.gif" alt="Cancel/OK button ordering" width="317" height="145"></p>
       <p><strong><code>Font(Device, FontData[]):</code></strong> Creates a font from an array of
         <code>FontData</code> objects.  This is important since any application that wishes to run properly
         on SWT/motif in DBCS languages should treat a <code>Font</code>’s collection of <code>FontData</code>
         objects as inseparable.</p>
       <p><strong><code>StyledText.setSelectionForeground/Background(Color):</code></strong> Sets the editor’s selection
         colors.  There are also new methods for getting these color values.</p>
-      <p align="center"><img border="0" src="images/swt-selectionColor.gif" width="245" height="49"></p>
+      <p align="center"><img border="0" src="images/swt-selectionColor.gif" alt="StyledText with custom selection colors" width="245" height="49"></p>
     </td>
   </tr>
   <tr>
