*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -105,7 +105,7 @@
     <td width="30%" valign="top" align="right"> 
       <div aligh="right"> <b>Watch points</b></div>
     </td>
-    <td width="70%" valign="top" align="left">
+    <td width="70%" valign="top" align="left"> 
       <p>A watch point is a breakpoint that suspends execution whenever a specified 
         variable is accessed or modified. To set a watchpoint, select a variable 
         in the Outline view and choose <b>Add/Remove Watchpoint</b> from its context 
@@ -137,6 +137,29 @@
       selected stack frame's package or declaring type can be quickly added to 
       the list of filters by selecting <b>Filter Type</b> or <b>Filter Package</b> 
       from the stack frame's context menu.</td>
+  </tr>
+  <tr> 
+    <td width="30%" valign="top" align="right"><b>Using the scrapbook</b></td>
+    <td width="70%" valign="top" align="left"> 
+      <p>If you want to experiment with API or test out a new algorithm, it's 
+        frequently easier to use a Java scrapbook page than create a new class. 
+        A scrapbook page is a container for random snippets of code that you can 
+        execute at any time without a context. To create a scrapbook page in the 
+        Java Perspective, select File&gt;New&gt;Scrapbook Page from the workbench 
+        menu, or click the New Scrapbook Page button <img src="images/new-scrapbook-button.gif" width="17" height="19">on 
+        the workbench toolbar. Enter whatever code you wish to execute, then select 
+        it. There are three ways to execute your code:</p>
+      <ul>
+        <li>Execute the selected code and place the returned result in the Expressions 
+          view</li>
+        <li>Execute the selected code and place the String result right in the 
+          scrapbook page<br>
+          <img src="images/scrapbook-display.gif" width="544" height="139"> </li>
+        <li>Execute the selected code (and ignore any returned result)</li>
+      </ul>
+      <p>These actions are in the workbench toolbar and also in the scrapbook 
+        page's context menu.</p>
+    </td>
   </tr>
   <tr> 
     <td width="30%" valign="top" align="right"><b>Editing<br>
@@ -174,6 +197,26 @@
         of the same type. You can view and edit all detail formatters in the Java&gt;Debug&gt;Detail 
         Formatters preference page. </p>
       <p><img src="images/detail-formatter.gif" width="426" height="582"></p>
+    </td>
+  </tr>
+  <tr> 
+    <td width="30%" valign="top" align="right"><b>Running code with compile errors</b></td>
+    <td width="70%" valign="top" align="left"> 
+      <p>You can run and debug code that did not compile cleanly. The only difference 
+        between running code with and without compile errors is that if a line 
+        of code with a compile error is executed, one of two things will happen:</p>
+      <ul>
+        <li>If the 'Suspend execution on compilation errors' preference on the 
+          Java&gt;Debug preference page is set and you are debugging, the debug 
+          session will suspend as if a breakpoint had been hit. Note that if your 
+          VM supports Hot Code Replace, you could then fix the compilation error 
+          and resume debugging</li>
+        <li>Otherwise, execution will terminate with a 'unresolved compilation' 
+          error </li>
+      </ul>
+      <p>It is important to emphasize that as long as your execution path avoids 
+        lines of code with compile errors, you can run and debug just as you normally 
+        do.</p>
     </td>
   </tr>
   <tr> 
