Added alt tags to Ant images

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
@@ -90,7 +90,7 @@ size throughout.]</p>
       Ant view allows you to view your Ant build files in one place and simplifies
       running a single Ant target. The view includes a search button for
       finding Ant build files in the workspace to add to the view.
-      <p align="center"><img border="0" src="../images/ant-view.gif" width="292" height="169"></td>
+      <p align="center"><img border="0" src="../images/ant-view.gif" width="292" height="169" alt="Ant view"></td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>External tools &amp; launch
@@ -103,14 +103,14 @@ size throughout.]</p>
       view. External tools can now be run in the background, by a separate
       thread. This means that you can let an Ant build run or launch an external
       program and still continue to work in the Eclipse IDE.</p>
-      <p align="center"><img border="0" src="images/ant-tabs.gif" width="474" height="574"></td>
+      <p align="center"><img border="0" src="images/ant-tabs.gif" width="474" height="574" alt="Launch configuration dialog"></td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Ant editor</b></td>
     <td width="70%" valign="top" align="left">
       <p>There is a new Ant editor that makes it easier to edit Ant build files.
       The Ant editor provides content assist, syntax highlighting, an outline, and error reporting.</p>
-      <p align="center"><img border="0" src="images/ant-editor.gif" width="466" height="82"></td>
+      <p align="center"><img border="0" src="images/ant-editor.gif" width="466" height="82" alt="Ant editor"></td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>More flexible project layouts</b></td>
