--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_annotations.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_annotations.htm
@@ -124,7 +124,7 @@ the vertical ruler when that portion of the document is visible.&nbsp;&nbsp;</p>
 <p>The vertical ruler below shows that there are two tasks in the document and
 one bookmark.&nbsp; Since the bookmarked text is visible, its annotation is also
 shown on the left.</p>
-<p><img src="images/javaeditoroverviewruler.gif" alt="" border="0" width="506" height="118"></p>
+<p><img src="images/javaeditoroverviewruler.gif" alt="Vertical rule in Java Editor" border="0" width="506" height="118"></p>
 <p>The user can navigate to the location of the annotation in the code by
 clicking on the annotation itself.</p>
 <p>The types of annotations shown in the overview ruler are determined by adding
@@ -165,7 +165,7 @@ and <a href="../reference/api/org/eclipse/ui/texteditor/MarkerAnnotation.html"><
 <h4>Text annotations </h4>
 <p>In addition to showing annotations in the rulers, a source viewer can show
 annotations as colored squiggly marks in the text.&nbsp;&nbsp;</p>
-<p><img src="images/javaeditorsquiggly.gif" alt=" " border="0" width="507" height="164"></p>
+<p><img src="images/javaeditorsquiggly.gif" alt="Squiggly mark in Java Editor" border="0" width="507" height="164"></p>
 <p>We'll look again at the creation of the source viewer in <a href="../reference/api/org/eclipse/ui/texteditor/TextEditor.html"><b>TextEditor</b></a>.</p>
 
 <pre><font color="#4444CC">protected ISourceViewer createSourceViewer(Composite parent, IVerticalRuler ruler, int styles) {
